traduction anglaise du robot

--- a/Site web/English/Home page.html
+++ b/Site web/English/Home page.html
@@ -47,7 +47,7 @@
 
     <div id="contenu">
         <h2>
-            Le club de robotique du collège Montmorency
+            Robotic club of college Montmorency
         </h2>
         <p>
             Since 2006, the robotic club welcomes many students, with numerous interest, to participate in the CRC robotic competition and to use their interest to compete in different categories. Our club is located in <a href="https://www.google.com/maps/place/Coll%C3%A8ge+Montmorency/@45.5594019,-73.7206471,17z/data=!3m1!4b1!4m5!3m4!1s0x4cc9223815890e79:0xe7408a77564697c4!8m2!3d45.5594019!4d-73.7184584"> Montmorency</a>            (475 Boulevard de l'Avenir, Laval, QC H7N 5H9).
@@ -70,8 +70,22 @@
 
         </p>
         <h2>
+            Video
+        </h2>
+        <video controls>
+            <source src="../images/" type="video/mp4">
+                
+          Your browser does not support the video tag.
+          </video>
+        <h2>
             Tutorial
         </h2>
+        <h4>
+            Theme
+        </h4>
+        <p>
+            This year theme come from the 2015 disney pixar movie Inside Out.
+        </p>
     </div>
 
 </body>
