--- a/Site web/English/Members.html
+++ b/Site web/English/Members.html
@@ -48,9 +48,29 @@
     <div id="contenu-membres">
         <div id="case">
             <div id="membres">
+                <img src="../images/membre 1.jpg" alt="image" width="100%" height="100%" />
+            </div>
+            <h2> Alexandra Renaud
+            </h2>
+            <p>
+
+            </p>
+        </div>
+        <div id="case">
+            <div id="membres">
+                <img src="../images/membre 7.jpg" alt="image" width="100%" height="100%" />
+            </div>
+            <h2> Jiali Sauvé
+            </h2>
+            <p>
+                Second year of robotics. I mostly help with the kiosk but also here and there whenever I can. It's truly a wonderful experience with everyone where we laugh and we have lots of fun.
+            </p>
+        </div>
+        <div id="case">
+            <div id="membres">
                 <img src="../images/image temporaire.png" alt="image" width="100%" height="100%" />
             </div>
-            <h2> Karine Huot
+            <h2> Florence Millette
             </h2>
             <p>
 
@@ -60,7 +80,7 @@
             <div id="membres">
                 <img src="../images/image temporaire.png" alt="image" width="100%" height="100%" />
             </div>
-            <h2> case 4
+            <h2> Benjamin Brault
             </h2>
             <p>
 
@@ -70,7 +90,19 @@
             <div id="membres">
                 <img src="../images/image temporaire.png" alt="image" width="100%" height="100%" />
             </div>
-            <h2> case 7
+            <h2> Karine Huot, Personne-ressource du club de robotique
+            </h2>
+            <p>
+                Each year since 13 years now, our team know how to surprise and be original. Members are responsables and give everything they have for the CRC robotic competition. My work with them is to support members and find way to help them to surpass themself.
+                Good luck guys!
+            </p>
+        </div>
+        <div id="case">
+            <div id="membres">
+                <img src="../images/membre 8.jpg" alt="image" width="100%" height="100%" />
+            </div>
+            <h2>
+                Charles Bourque
             </h2>
             <p>
 
@@ -80,7 +112,7 @@
             <div id="membres">
                 <img src="../images/image temporaire.png" alt="image" width="100%" height="100%" />
             </div>
-            <h2> case 10
+            <h2> Jérémie L'Abbée
             </h2>
             <p>
 
@@ -88,9 +120,9 @@
         </div>
         <div id="case">
             <div id="membres">
-                <img src="../images/image temporaire.png" alt="image" width="100%" height="100%" />
+                <img src="../images/membre 3.jpg" alt="image" width="100%" height="100%" />
             </div>
-            <h2> case 2
+            <h2> Mikhael Bianki-Massé
             </h2>
             <p>
 
@@ -98,27 +130,7 @@
         </div>
         <div id="case">
             <div id="membres">
-                <img src="../images/image temporaire.png" alt="image" width="100%" height="100%" />
-            </div>
-            <h2> case 5
-            </h2>
-            <p>
-
-            </p>
-        </div>
-        <div id="case">
-            <div id="membres">
-                <img src="../images/image temporaire.png" alt="image" width="100%" height="100%" />
-            </div>
-            <h2> case 8
-            </h2>
-            <p>
-
-            </p>
-        </div>
-        <div id="case">
-            <div id="membres">
-                <img src="../images/image temporaire.png" alt="image" width="100%" height="100%" />
+                <img src="../images/membre 2.jpg" alt="image" width="100%" height="100%" />
             </div>
             <h2> case 11
             </h2>
@@ -130,7 +142,7 @@
             <div id="membres">
                 <img src="../images/image temporaire.png" alt="image" width="100%" height="100%" />
             </div>
-            <h2> case 3
+            <h2> case 14
             </h2>
             <p>
 
@@ -138,7 +150,17 @@
         </div>
         <div id="case">
             <div id="membres">
-                <img src="../images/image temporaire.png" alt="image" width="100%" height="100%" />
+                <img src="../images/membre 9.jpg" alt="image" width="100%" height="100%" />
+            </div>
+            <h2> Chloé Legault
+            </h2>
+            <p>
+
+            </p>
+        </div>
+        <div id="case">
+            <div id="membres">
+                <img src="../images/membre 11.jpg" alt="image" width="100%" height="100%" />
             </div>
             <h2> case 6
             </h2>
@@ -148,9 +170,9 @@
         </div>
         <div id="case">
             <div id="membres">
-                <img src="../images/image temporaire.png" alt="image" width="100%" height="100%" />
+                <img src="../images/membre 6.jpg" alt="image" width="100%" height="100%" />
             </div>
-            <h2> case 9
+            <h2> Elyanna
             </h2>
             <p>
 
@@ -161,6 +183,16 @@
                 <img src="../images/image temporaire.png" alt="image" width="100%" height="100%" />
             </div>
             <h2> case 12
+            </h2>
+            <p>
+
+            </p>
+        </div>
+        <div id="case">
+            <div id="membres">
+                <img src="../images/image temporaire.png" alt="image" width="100%" height="100%" />
+            </div>
+            <h2> case 15
             </h2>
             <p>
 
