--- a/Site web/Francais/Le robot.html
+++ b/Site web/Francais/Le robot.html
@@ -74,7 +74,7 @@
                         <dd>Début de la construction du tube pressoir à champignon</dd>
                         <dd>Design de l'entonnoir pour la balle</dd>
                         <dd>Design du mécanisme permettant d'immobiliser la tornade</dd>
-                        <dt>Construction d'une base amovible</dt>
+                        <dt>Construction d'une base pilotable</dt>
                         <dd>Installation des roues des années précédentes</dd>
                         <dd>Fixation du panneau contenant l'Électronique</dd>
                         <dd>Installation des prototypes fonctionnels</dd>
@@ -133,6 +133,7 @@
                         <dd>Test des différentes têtes de balai</dd>
                         <dt>Installation</dt>
                         <dd>Installation de la tête de balai final</dd>
+                        <dd>Installation des roues mécanum</dd>
                     </dl>
                 </div>
             </div>
