--- a/Site web/English/The robot.html
+++ b/Site web/English/The robot.html
@@ -50,66 +50,97 @@
         <div class="timeline">
             <div class="container left">
                 <div class="content">
-                    <h2>Semaine 1</h2>
+                    <h2>Week 1</h2>
                     <dl>
-                        <dt>Analyse du défis et des obstacles</dt>
-                        <dd>Trouver les objectifs</dd>
-                        <dt>Début des idées</dt>
+                        <dt>Analysis of the challenge and the obstacles</dt>
+                        <dd>Finding objectives</dd>
+                        <dt>Start of ideas</dt>
                         <dd>BrainStorm</dd>
-                        <dd>Analyse des idées</dd>
-                        <dd>Conception des plans pour l'équipe</dd>
-                        <dt>Démontage de l'ancien robot</dt>
-                        <dd>Récupération des anciennes pièces</dd>
+                        <dd>Analysis of ideas</dd>
+                        <dd>Designing of plans for the team</dd>
+                        <dt>Disassembly of the old robot</dt>
+                        <dd>Recovering of old pieces</dd>
                     </dl>
                 </div>
             </div>
             <div class="container right">
                 <div class="content">
-                    <h2>Semaine 2</h2>
+                    <h2>Week 2 to 4</h2>
                     <dl>
 
-                        <dt>Début des prototypes</dt>
-                        <dd>Dessins de croquis</dd>
-                        <dd>Construction d'une base amovible</dd>
-                        <dd>Électronique de base</dd>
-                        <dd>Début de la construction du tube pressoir à champignon</dd>
+                        <dt>Start of prototypes</dt>
+                        <dd>Sketch drawings</dd>
+                        <dd>Basic electronics</dd>
+                        <dd>Beginning of construction of the mushroom press tube.</dd>
+                        <dd>Design of the funnel for the ball</dd>
+                        <dd>Design of the mechanism to immobilize the tornado</dd>
+                        <dt>Construction of a pilotable base</dt>
+                        <dd>Installation of previous years wheels</dd>
+                        <dd>Fixing the panel containing electronics</dd>
+                        <dd>Installing functional prototypes</dd>
 
+                    </dl>
+                    <img src="../images/entonnoir.jpg" alt="image" width="62.5%" height="62.5%" />
+                    <img src="../images/La langue du robot pvc.jpg" alt="image" width="35%" height="35%" />
+                </div>
+            </div>
+            <div class="container left">
+                <div class="content">
+                    <h2>Week 5</h2>
+                    <dl>
+                        <dt>Continuation of prototypes</dt>
+                        <dd>Construction of the prototype of the broom that will attain the arch</dd>
+                        <dt>installation</dt>
+                        <dd>Installation of the last prototype and test</dd>
+                        <dd>Installation of motor controller</dd>
+                        <dd>Installation of electronics</dd>
+                        <dd>Construction of the mechanism to immobilize the tornado</dd>
+                        <img src="../images/tenneur de tornade.jpg" alt="image" width="47%" height="47%" />
+                        <img src="../images/Mecanisme balai.jpg" alt="image" width="47%" height="47%" />
                     </dl>
                 </div>
             </div>
+            <div class="container right">
+                <div class="content">
+                    <h2>Week 6</h2>
+                    <dl>
+                        <dt>Test</dt>
+                        <dd>Pilotable base test drive</dd>
+                        <dd>Testing different mechanisms in motion</dd>
+                        <dt>Construction</dt>
+                        <dd>Addition of lexan to protect the robot during contact with the tornado or other robot</dd>
+                    </dl>
+                    <img src="../images/Robot final plus ou moins avec lexan.jpg" alt="image" width="100%" height="100%" />
+                    <img src="../images/robot pas mal fini avec lexan.jpg" alt="image" width="100%" height="100%" />
+                </div>
+            </div>
             <div class="container left">
                 <div class="content">
-                    <h2>Semaine 3</h2>
-                    <p>Lorem ipsum..</p>
+                    <h2>Week 7 to 9</h2>
+                    <dl>
+                        <dt>Test</dt>
+                        <dd>Continuation of the various tests</dd>
+                        <dt>Prototype</dt>
+                        <dd>To fix potential problems caused by the hairs of the broom that are too soft, prototypes have been created</dd>
+                    </dl>
                 </div>
             </div>
             <div class="container right">
                 <div class="content">
-                    <h2>Semaine 4</h2>
-                    <p>Lorem ipsum..</p>
+                    <h2>Week 10 to the compétition</h2>
+                    <dl>
+                        <dt>Test</dt>
+                        <dd>Test of different broom head</dd>
+                        <dd>Test drive</dd>
+                        <dt>Installation</dt>
+                        <dd>Installation of the final broom head</dd>
+                        <dd>Installation of mecanum wheel</dd>
+                    </dl>
                 </div>
             </div>
-            <div class="container left">
-                <div class="content">
-                    <h2>Semaine 5</h2>
-                    <p>Lorem ipsum..</p>
-                </div>
-            </div>
-            <div class="container right">
-                <div class="content">
-                    <h2>Semaine 6</h2>
-                    <p>Lorem ipsum..</p>
-                </div>
-            </div>
-            <div class="container left">
-                <div class="content">
-                    <h2>Semaine 7</h2>
-                    <p>Lorem ipsum..</p>
-                </div>
-            </div>
+
         </div>
     </div>
-
 
 </body>
 
