--- a/Site web/Francais/Page principale.html
+++ b/Site web/Francais/Page principale.html
@@ -74,11 +74,19 @@
         <h2>
             Vidéo
         </h2>
-        <p> ici il va y avoir le video</p>
+        <video controls>
+            <source src="../images/" type="video/mp4">
+                
+          Your browser does not support the video tag.
+          </video>
         <h2>
             Tutoriel
         </h2>
-        <p> ici il va y avoir le video du tutoriel</p>
+        <video controls>
+            <source src="../images/" type="video/mp4">
+                
+          Your browser does not support the video tag.
+          </video>
 
         <h4>
             Thème
