--- a/Site web/English/The robot.html
+++ b/Site web/English/The robot.html
@@ -127,7 +127,7 @@
             </div>
             <div class="container right">
                 <div class="content">
-                    <h2>Week 10 to the compétition</h2>
+                    <h2>Week 10 to the competition</h2>
                     <dl>
                         <dt>Test</dt>
                         <dd>Test of different broom head</dd>
