video pas encore mise

--- a/Site web/English/Home page.html
+++ b/Site web/English/Home page.html
@@ -80,6 +80,11 @@
         <h2>
             Tutorial
         </h2>
+        <video controls>
+            <source src="../images/" type="video/mp4">
+                
+          Your browser does not support the video tag.
+          </video>
         <h4>
             Theme
         </h4>
