--- a/Site web/English/The game.html
+++ b/Site web/English/The game.html
@@ -44,9 +44,29 @@
             </div>
         </header>
     </div>
-
     <div id="contenu">
-
+        <h2>
+            Flip 2020
+        </h2>
+        <p>
+            Game description
+        </p>
+        <p>L’objectif du jeu est de faire le plus de points possible en 5 minutes. Deux équipes de deux robots s’affronteront sur une arène rectangulaire, les équipes seront différenciées par leurs couleurs, soit jaune ou bleu. Pour faire un point, une poche
+            de sable doit être mise dans le bac de son équipe. Les robots ne peuvent toutefois pas toucher aux poches de sables. Un convoyeur se chargera d’apporter les poches dans un bac ou dans l’autre. Le dispositif de distribution se chargera de laisser
+            tomber les poches sur le convoyeur. Puisque les équipes ne peuvent toucher ni au convoyeur, ni aux poches de sable, elles ne pourront modifier l’issu du jeu qu’avec l’aide d’activateurs de bonus qui agiront soit sur le dispositif de distribution
+            ou le convoyeur. Les quatre premiers activateurs dont je vais vous parler sont dédoublés, il y en a donc 4 attribués exclusivement aux jaunes et 4 aux bleus. Le premier activateur que les équipes devront appuyer est la planche à charnière
+            qui servira à activer le distributeur de poche qui laissera tomber des poches à intervalles réguliers. À partir de ce moment le convoyeur tournera pendant 30 secondes vers le bac de l’équipe ayant activé en premier la planche, puis vers l’autre
+            équipe et ainsi de suite. Après une minute de jeu les équipes pourront de nouveau activer la planche à charnière, le bonus ne pourra être activé qu’une fois dans la manche, il fera changer le sens du convoyeur. La balle enchainee augmente
+            la vitesse de distribution des poches, l’arche ralenti soit le convoyeur, soit la vitesse de distribution des pieces de jeu, elle peut également déposer une poche noire qui vaut pour 30 points, alors que les poches habituelles en valent 5.
+            Les champignons accélèrent la vitesse du convoyeur. 30 secondes de recharge est nécessaire entre chaque activation de power-up. Le seul obstacle commun aux deux équipes est la tornade que lorsque activé arrêtera le convoyeur pour 10 secondes.
+        </p>
+        <img src="../images/Le Jeux 1.png" alt="image" width="33%" />
+        <img src="../images/Le Jeux 2.png" alt="image" width="33%" />
+        <img src="../images/Le Jeux 3.png" alt="image" width="33%" />
+        <img src="../images/Le Jeux 4.png" alt="image" width="33%" />
+        <img src="../images/Le Jeux 5.png" alt="image" width="33%" />
+        <img src="../images/Le Jeux 6.png" alt="image" width="33%" />
+    </div>
     </div>
 
 </body>
