membres et souvenir

--- a/Site web/English/Logbook.html
+++ b/Site web/English/Logbook.html
@@ -47,43 +47,45 @@
 
     <div id="contenu-journal">
         <p class="images-float-left">
-            <img src="../images/journal test.jpg" alt="jounal de bord" />
+            <img src="../images/logbook 2.jpg" alt="jounal de bord" />
         </p>
+        <h2>Meeting 1</h2>
         <p style="line-height: 25px;">
-            Texte à droite de l'image supposé
+            Twenty students interested in robotics are spread out across the classroom. This is the first day that everyone has met, both new and old are excited to start the year of robotics. The meeting is opened with the presentations: Karine, our manager, is
+            the first to introduce herself, then it’s the turn of the elders and finally the new arrivals close the presentations. Alexandra, our captain, explains what CRC is. She presents all the components, namely the robot, the video, the kiosk, the
+            website, the programming and the creation of the T-Shirts. At everyone's request, we listen to the highlights of previous years. After all, what is the best way to get into the spirit of competition? A first idea for a theme is launched ...
+            The energy level increases visibly in the room, the themes are launched in abundance. Time flies quickly. It’s late and no decision has been made, yet there is no emergency. The choice of theme is therefore postponed until a future meeting.
+            The elders specify, the evening is not over, all have not yet seen the local. Loudly, we move to said room. The tour is quickly done, it's a small and messy place. Co-captain Charles presents the robot from the previous year. The meeting ends
+            with this presentation, the next meeting will take place in two weeks.
+        </p>
+        <h2>Meeting 2</h2>
+        <p style="line-height: 25px;">
+            It was decided that the meeting should primarily serve to dismantle the robot from last year. All new members are therefore invited to learn the basic mechanisms mainly used in Montmorency. Charles and Jérémy present a short course on materials, tools
+            and ways of doing things. The new ones ask a lot of questions about the constitution of the robot, why certain materials were used rather than others. Some of the alternatives they presented in their questions made a lot of sense, they even
+            came up with solutions that we hadn't thought of before. The embarrassment of not being able to answer their questions was greatly overcome by the pride of having new strengths in our team. Robotics was a passion shared by all. A few hours
+            later, the robot was completely analyzed and dismantled. Everyone was finally able to return home.
+        </p>
+        <h2>Meeting 3</h2>
+        <p style="line-height: 25px;">
+            Following the first meeting, the 2019-2020 theme had still not been decided, so was finally time to put it back on the agenda. Alexandra had prepared her top 5 videos from the previous year, as well as a video montage of the kiosks to open the meeting
+            and demonstrate the importance of the choice of theme. It was then noticed that some videos are very simple, yet excellent, complex videos are just as much. The complexity of the video is therefore not a determining factor, it is possible
+            to make excellent videos without it being complicated. After all those videos, the storm of ideas began. A variety of different themes are noted. There are good ideas and others are bad, some are simple while others are complex, some are original
+            while others are recurrent, some are realistic while others are impracticable. After a while, three highly appreciated themes emerge from all the others, namely Nemo, Escape Room and Inside Out. In order to involve as many people as possible
+            in the decision, the vote on the final theme will be between these three ideas on the Facebook group of the robotics club.
         </p>
 
         <p class="images-float-right">
-            <img src="../images/journal test.jpg" alt="jounal de bord" />
+            <img src="../images/logbook 1.jpg" alt="jounal de bord" />
         </p>
+        <h2>Meeting 4</h2>
         <p style="line-height: 25px;">
-            Texte à gauche de l'image supposé mais non, car je sais pas on va devoir mettre bcp de break machin faisons un test </br>
-            </br>
-            </br>
-            </br>
-            </br>
-            </br>
-            </br>
-            </br>
-            </br> ugivu </br>
-            </br>
-            </br>
-            </br> gvyv
-            </br>
-            </br>
-            </br>
-            </br>
-            </br>
-            </br>
-            </br> ugivu </br>
-            </br>
-            </br>
-            </br>
-            </br>
-            </br>
-            </br>
-            </br> ugivu
-            <!-- bref ca marche mais dependement de la grosseur il faut olus ou moin de texte -->
+            Since a few days, the choice of theme seemed to be clear, the next step was to formalize it. It is therefore with pleasure that Alexandra announces that the theme of Montmorency in 2019-2020 will be Inside Out. Everyone seems satisfied with this choice.
+            Chaos does not take long, everyone has ideas and wants to talk to their neighbor. It’s only after about 30 minutes that the captain requests the return of order, it’s time to present ideas. Benjamin and Alexandra open the ball, armed with
+            pencils they explain their idea of raised floor on the board. This idea is not unanimous, but everyone agrees on its potential. A platform would allow us to differentiate ourselves from other teams and challenge ourselves. The raised floor
+            would also allow to circulate below the floor colored balls, they would be visible below our feet at certain sections of the platform which would be built in thick Lexan. Olivier suggests that the mechanism used to transport the balls should
+            be a pneumatic system. Charles and Alexandra have doubts, a pneumatic system of this magnitude would require advance preparation. Working in advance has never been a strength of Montmorency, maybe it will change this year? Chloé proposes to
+            make a control panel like in the film, it could also be interactive. Benjamin proposes to pass a train over the walls. The board was gradually filling with sketches of kiosks and lists of ideas. There were plenty of ideas. The board is photographed,
+            then shared on the Facebook group. Each of us could now go back to their houses.
         </p>
     </div>
 
