--- a/Site web/English/Memories.html
+++ b/Site web/English/Memories.html
@@ -55,7 +55,7 @@
         <img src="../images/souvenir 5.jpg" alt="boule 5">
         <img src="../images/souvenir 6.jpg" alt="boule 6">
         <img src="../images/souvenir 7.png" alt="boule 7">
-        <img src="../images/souvenir 8.jpg" alt="boule 7">
+        <img src="../images/souvenir romy.png" alt="boule 7">
         <img src="../images/souvenirs 12.jpg" alt="boule 7">
         <img src="../images/souvenir 10.jpg" alt="boule 7">
         <img src="../images/souvenir 11.jpg" alt="boule 7">
