--- a/Site web/English/The game.html
+++ b/Site web/English/The game.html
@@ -51,7 +51,7 @@
         <p>
             Game description
         </p>
-        <p>The objective is to score the most points possible in 5 minutes. Two teams of two will compete in a rectangular arena with their robots. The teams will be identified by colors, either yellow or blue. To score a point, a sand pocket must go in
+        <p style="line-height: 25px;">The objective is to score the most points possible in 5 minutes. Two teams of two will compete in a rectangular arena with their robots. The teams will be identified by colors, either yellow or blue. To score a point, a sand pocket must go in
             the team’s basket, but the robot can’t touch the sand pockets. A conveyor belt will be responsible of carrying the sand pockets. A device will be in charge of releasing the pockets on the conveyor belt . Since the teams can’t touch the conveyor
             nor the sand pockets, they can only change the outcome of the game by using the bonus activator that will act on the distribution device or the conveyor belt. The first four activator are splitted, so there’s four assigned to the yellow team
             and four assigned to the blue team. The first activator the teams need to activate is the hinged plate which will activate the sand pocket distributor which will let the sand pockets fall on regular interval. At that moment, the conveyor belt
