--- a/Site web/Francais/Journal de bord.html
+++ b/Site web/Francais/Journal de bord.html
@@ -47,65 +47,55 @@
 
     <div id="contenu-journal">
         <p class="images-float-left">
-            <img src="../images/journal test.jpg" alt="jounal de bord" />
+            <img src="../images/logbook 2.jpg" alt="jounal de bord" />
         </p>
+        <h2>Rencontre 1</h2>
         <p style="line-height: 25px;">
-            Texte à droite de l'image supposé
-            </br>
-            </br>
-            </br>
-            </br>
-            </br>
-            </br>
-            </br>
-            </br> ugivu </br>
-            </br>
-            </br>
-            </br> gvyv
-            </br>
-            </br>
-            </br>
-            </br>
-            </br>
-            </br>
-            </br>
-            </br> ugivu </br>
-            </br>
-            </br>
-            </br> gvyv
+            Une vingtaine d’étudiants intéressée par la robotique est répartie aux quatre coins d’une salle de classe. C’est la première journée que tout le monde se rencontre, autant les nouveaux que les anciens sont excités de commencer l’année de robotique. La
+            soirée est ouverte par les présentations : Karine, notre responsable, est la première à se présenter, puis c’est le tour des anciens et finalement les nouveaux arrivants ferment les présentations. Alexandra, notre capitaine, explique ce qu’est
+            la CRC. Elle présente tous les volets, soit le robot, la vidéo, le kiosque, le site web, la programmation et la création des T-Shirt. À la demande de tous, on écoute les highlights des années précédentes. Après tout, qu’y a-t-il de mieux pour
+            se mettre dans l’esprit de la compétition? Une première idée de thème est lancée... Le niveau d’énergie augmente à vue d’œil dans le local, les thèmes sont lancés à profusion. Rapidement, le temps s’écoule. Il est tard et aucune décision n’a
+            été prise, pourtant il n’y a pas d’urgence. Le choix du thème est donc remis à une prochaine rencontre. Les anciens signalent, alors que la soirée n’est pas finie, tous n’ont pas encore vu le local. Bruyamment, on se déplace vers ledit local.
+            Le tour est rapidement fait, c’est un petit local en désordre. Le co-capitaine, Charles présente le robot de l’année précédente. La réunion se conclut sur cette présentation, la prochaine réunion aura lieu dans deux semaines.
         </p>
+        <h2>Rencontre 2</h2>
+        <p style="line-height: 25px;">
+            Il a été décidé que la réunion serve en premier lieu à démonter le robot de l’année passée. Tous les nouveaux sont donc convoqués afin d’apprendre par le fait même les mécanismes de base principalement utilisés à Montmorency. Charles et Jérémy présentent
+            un petit cours sur les matériaux, les outils et sur les façons de faire. Les nouveaux posent beaucoup de questions sur la constitution du robot, pourquoi certains matériaux ont été utilisés plutôt que d’autres. Certaines des alternatives qu’ils
+            ont présentées dans leurs questions faisait beaucoup de sens, ils sont même venus avec des solutions que nous n’avions pas pensées auparavant. La gêne de ne pas pouvoir répondre à ses questions était largement dépassée par la fierté d’avoir
+            de nouveaux atouts à notre équipe. La robotique était une passion partagée par tous. Quelques heures plus tard, le robot était complètement analysé et démonté. Chacun put enfin retourner chez soi.
+        </p>
+        <h2>Rencontre 3</h2>
+        <p style="line-height: 25px;">
+            À la suite de la première rencontre, le thème 2019-2020 n’avait toujours pas été décidé, il est donc temps de le remettre à l’ordre du jour. Alexandra avait préparé un top 5 des vidéos de l’année précédente, ainsi qu’un montage vidéo des kiosques afin
+            d’ouvrir la rencontre et de démontrer l’importance du choix du thème. Il a alors été remarqué que certaines vidéos sont très simples, pourtant excellentes, les vidéos complexes le sont tout aussi. La complexité de la vidéo n’est donc pas un
+            facteur déterminant, il est possible de faire d’excellentes vidéos sans se casser la tête. Après tous ces visionnements, la tempête d’idées commence. Une variété de thèmes différents sont notés. Il y des bonnes idées et d’autres mauvaises,
+            des idées simples et d’autres complexes, des idées originales et d’autres récurrentes, des idées réalistes et d’autres impraticables… C’est après quelques temps que ressortent trois thèmes fortement appréciés par les membres présents, soit
+            Nemo, Escape Room et Inside Out. Afin d’impliquer le plus de personnes possibles dans la décision, le vote du thème final se ferra entre ces trois idées sur le groupe Facebook du club de robotique. </p>
 
         <p class="images-float-right">
-            <img src="../images/journal test.jpg" alt="jounal de bord" />
+            <img src="../images/logbook 1.jpg" alt="jounal de bord" />
         </p>
+        <h2>Rencontre 4</h2>
         <p style="line-height: 25px;">
-            Texte à gauche de l'image supposé mais non, car je sais pas on va devoir mettre bcp de break machin faisons un test </br>
-            </br>
-            </br>
-            </br>
-            </br>
-            </br>
-            </br>
-            </br>
-            </br> ugivu </br>
-            </br>
-            </br>
-            </br> gvyv
-            </br>
-            </br>
-            </br>
-            </br>
-            </br>
-            </br>
-            </br> ugivu </br>
-            </br>
-            </br>
-            </br>
-            </br>
-            </br>
-            </br>
-            </br> ugivu
-            <!-- bref ca marche mais dependement de la grosseur il faut olus ou moin de texte -->
+            Depuis quelques jours, le choix de thème semble être clair, il ne reste plus qu’à l’officialiser. C’est donc avec plaisir qu’Alexandra annonce que le thème de Montmorency en 2019-2020 sera Inside Out. Tout le monde semble contenté par ce choix. Ce n’est
+            pas long que le chaos prend le dessus, tout le monde a des idées et veut en parler à son voisin. Ce n’est qu’après une trentaine de minutes que le capitaine demande le retour de l’ordre, il est temps de présenter des idées. Benjamin et Alexandra
+            ouvrent le bal, armés de crayons ils expliquent leur idée de plancher surélevé au tableau. Cette idée ne fait pas l’unanimité, mais tous sont d’accord sur son potentiel. Une plateforme nous permettrait de nous différencier des autres équipes
+            et de nous mettre au défi. Le plancher surélevé permettrait de faire circuler en dessous des boules de couleurs, elles seraient visibles en dessous de nos pieds à certaines sections de la plateforme qui seraient construites en Lexan épais.
+            Olivier propose que le mécanisme servant à transporter les boules soit un système pneumatique. Charles et Alexandra émettent des doutes, un système pneumatique de cet ampleur nécessiterait une préparation d’avance. Travailler d’avance n’a
+            pourtant jamais été une force de Montmorency, peut-être cela changera-t-il cette année? Chloé propose de faire un panneau de contrôle comme dans le film, il pourrait également être interactif. Benjamin propose quant à lui de faire passer un
+            train au-dessus des murs. Le tableau se remplissait peu à peu de croquis de kiosques et de listes d’idées. Des idées, il n’en manquait pas. Le tableau est pris en photo, puis partager sur le groupe Facebook.
+        </p>
+        <h2>Rencontre 5</h2>
+        <p style="line-height: 25px;">
+            23 octobre 2020, deux jours après la remise électronique des règlements préliminaires. La compétition commence peu à peu à se concrétisée. Nous avons un thème, d’innombrables idées de kiosques, de nouvelles recrues… il ne reste plus qu’à connaitre le
+            jeu pour amorcer le robot. Alexandra commence par expliquer en quoi consiste le kick off et que les étudiants qui pourront y assister seront choisis sous peu. Puis, on décide de présenter les règlements reçus à l’aide du projecteur de la classe.
+            Les étudiants semblent hypnotisés par le tableau. Après tout, pour certains c’est la première fois qu’ils voient un livret de règlements de la CRC. 60 pages, c’est long. Les avant-propos et l’introduction sont brièvement expliqués, les dates
+            sont notées, les nouveaux adversaires sont remarqués, rapidement la section Jeu arrive. Les carrés noirs cachant les parties importantes du texte sont plus que frustrants, malgré tout nous tentons de décortiquer le texte comme possible. Les
+            carrés noirs ne nous empêchent pas de spéculer sur le jeu. Il est possible de comprendre que les robots devront interagir avec plusieurs types d’obstacles qui auront différents effets sur l’issu de la manche. Nous remarquons également que
+            les copilotes auront une grande importance cette année, peut-être le pilote aura-t-il un handicap de quelconque nature? Tant bien que mal, l’équipe pense avoir tiré des règlements préliminaires tout ce qu’il était possible d’en tirer. Les
+            théories sur le jeu ne manquent pas, déjà deux personnes sont au tableau pour faire des croquis d’arène et de robot. Sur un papier a été noter les questions pertinentes ayant fait éruptions pendant la lecture. Celles-ci nous aiderons peut-être
+            à mieux saisir les règlements une fois la version finale publiée.
         </p>
     </div>
 
