--- a/Site web/English/Members.html
+++ b/Site web/English/Members.html
@@ -68,17 +68,17 @@
         </div>
         <div id="case">
             <div id="membres">
-                <img src="../images/image temporaire.png" alt="image" width="100%" height="100%" />
+                <img src="../images/membre flo.jpg" alt="image" width="100%" height="100%" />
             </div>
             <h2> Florence Millette
             </h2>
             <p>
-
+                It’s my third year participating in a robotic competition! I work on a bit of everything like the robot, the kiosk and where we need help. This year, I started working on the team’s website! I never knew how to build one, but I really enjoyed doing it.
             </p>
         </div>
         <div id="case">
             <div id="membres">
-                <img src="../images/image temporaire.png" alt="image" width="100%" height="100%" />
+                <img src="../images/membre ben.jpg" alt="image" width="100%" height="100%" />
             </div>
             <h2> Benjamin Brault
             </h2>
@@ -86,17 +86,16 @@
 
             </p>
         </div>
-        <div id="case">
+        <!--<div id="case">
             <div id="membres">
                 <img src="../images/image temporaire.png" alt="image" width="100%" height="100%" />
             </div>
-            <h2> Karine Huot, Personne-ressource du club de robotique
+            <h2> case 13
             </h2>
             <p>
-                Each year since 13 years now, our team know how to surprise and be original. Members are responsables and give everything they have for the CRC robotic competition. My work with them is to support members and find way to help them to surpass themself.
-                Good luck guys!
+
             </p>
-        </div>
+        </div>-->
         <div id="case">
             <div id="membres">
                 <img src="../images/membre 8.jpg" alt="image" width="100%" height="100%" />
@@ -110,12 +109,12 @@
         </div>
         <div id="case">
             <div id="membres">
-                <img src="../images/image temporaire.png" alt="image" width="100%" height="100%" />
+                <img src="../images/membre jay.jpg" alt="image" width="100%" height="100%" />
             </div>
             <h2> Jérémie L'Abbée
             </h2>
             <p>
-
+                It’s been five years since I participated in the CRC robotic competition and I’m not ready to stop. Each year I learn new things and I’m still looking forward for a first victory.
             </p>
         </div>
         <div id="case">
@@ -128,21 +127,21 @@
 
             </p>
         </div>
-        <div id="case">
+        <!--<div id="case">
             <div id="membres">
                 <img src="../images/membre 2.jpg" alt="image" width="100%" height="100%" />
             </div>
-            <h2> case 11
+            <h2> Nicolas
             </h2>
             <p>
 
             </p>
-        </div>
+        </div>-->
         <div id="case">
             <div id="membres">
                 <img src="../images/image temporaire.png" alt="image" width="100%" height="100%" />
             </div>
-            <h2> case 14
+            <h2> Nicolas Lamon
             </h2>
             <p>
 
@@ -162,7 +161,7 @@
             <div id="membres">
                 <img src="../images/membre 11.jpg" alt="image" width="100%" height="100%" />
             </div>
-            <h2> case 6
+            <h2> Olivier Genest
             </h2>
             <p>
 
@@ -175,10 +174,11 @@
             <h2> Elyanna
             </h2>
             <p>
-
+                Joining the robotic club was a breath of fresh air this year. These people became my family and helped me to grow up. Being part of the robotic club gave me the courage to showcase my talents and, in return, I received a lot of gratitude. A special thanks
+                for the captain for welcoming me into the team.
             </p>
         </div>
-        <div id="case">
+        <!--<div id="case">
             <div id="membres">
                 <img src="../images/image temporaire.png" alt="image" width="100%" height="100%" />
             </div>
@@ -187,15 +187,16 @@
             <p>
 
             </p>
-        </div>
+        </div>-->
         <div id="case">
             <div id="membres">
                 <img src="../images/image temporaire.png" alt="image" width="100%" height="100%" />
             </div>
-            <h2> case 15
+            <h2> Karine Huot, Personne-ressource du club de robotique
             </h2>
             <p>
-
+                Each year since 13 years now, our team know how to surprise and be original. Members are responsables and give everything they have for the CRC robotic competition. My work with them is to support members and find way to help them to surpass themself.
+                Good luck guys!
             </p>
         </div>
 
