--- a/Site web/Francais/Le jeux.html
+++ b/Site web/Francais/Le jeux.html
@@ -52,7 +52,7 @@
         <p>
             Description du jeu
         </p>
-        <p>L’objectif du jeu est de faire le plus de points possible en 5 minutes. Deux équipes de deux robots s’affronteront sur une arène rectangulaire, les équipes seront différenciées par leurs couleurs, soit jaune ou bleu. Pour faire un point, une poche
+        <p style="line-height: 25px;">L’objectif du jeu est de faire le plus de points possible en 5 minutes. Deux équipes de deux robots s’affronteront sur une arène rectangulaire, les équipes seront différenciées par leurs couleurs, soit jaune ou bleu. Pour faire un point, une poche
             de sable doit être mise dans le bac de son équipe. Les robots ne peuvent toutefois pas toucher aux poches de sables. Un convoyeur se chargera d’apporter les poches dans un bac ou dans l’autre. Le dispositif de distribution se chargera de laisser
             tomber les poches sur le convoyeur. Puisque les équipes ne peuvent toucher ni au convoyeur, ni aux poches de sable, elles ne pourront modifier l’issu du jeu qu’avec l’aide d’activateurs de bonus qui agiront soit sur le dispositif de distribution
             ou le convoyeur. Les quatre premiers activateurs dont je vais vous parler sont dédoublés, il y en a donc 4 attribués exclusivement aux jaunes et 4 aux bleus. Le premier activateur que les équipes devront appuyer est la planche à charnière
