--- a/Site web/Francais/Les membres.html
+++ b/Site web/Francais/Les membres.html
@@ -68,7 +68,7 @@
         </div>
         <div id="case">
             <div id="membres">
-                <img src="../images/image temporaire.png" alt="image" width="100%" height="100%" />
+                <img src="../images/membre flo.jpg" alt="image" width="100%" height="100%" />
             </div>
             <h2> Florence Millette
             </h2>
@@ -78,7 +78,7 @@
         </div>
         <div id="case">
             <div id="membres">
-                <img src="../images/image temporaire.png" alt="image" width="100%" height="100%" />
+                <img src="../images/membre ben.jpg" alt="image" width="100%" height="100%" />
             </div>
             <h2> Benjamin Brault
             </h2>
@@ -86,17 +86,16 @@
 
             </p>
         </div>
-        <div id="case">
+        <!-- <div id="case">
             <div id="membres">
                 <img src="../images/image temporaire.png" alt="image" width="100%" height="100%" />
             </div>
-            <h2> Karine Huot, Personne-ressource du club de robotique
+            <h2> case 13
             </h2>
             <p>
-                Chaque année le club de robotique du Collège sait nous surprendre et être original avec leurs idées. Ce que je retiens de notre équipe c’est leur grand sens des responsabilité, leur fiabilité et dévouement à cette compétition. Donc mon rôle est de les
-                supporter et les aider à aller encore plus loin et se dépasser. Bravo la gang et on lâche pas!
+
             </p>
-        </div>
+        </div>-->
         <div id="case">
             <div id="membres">
                 <img src="../images/membre 8.jpg" alt="image" width="100%" height="100%" />
@@ -110,7 +109,7 @@
         </div>
         <div id="case">
             <div id="membres">
-                <img src="../images/image temporaire.png" alt="image" width="100%" height="100%" />
+                <img src="../images/membre jay.jpg" alt="image" width="100%" height="100%" />
             </div>
             <h2> Jérémie L'Abbée
             </h2>
@@ -128,7 +127,7 @@
 
             </p>
         </div>
-        <div id="case">
+        <!--<div id="case">
             <div id="membres">
                 <img src="../images/membre 2.jpg" alt="image" width="100%" height="100%" />
             </div>
@@ -137,12 +136,12 @@
             <p>
 
             </p>
-        </div>
+        </div>-->
         <div id="case">
             <div id="membres">
                 <img src="../images/image temporaire.png" alt="image" width="100%" height="100%" />
             </div>
-            <h2> case 14
+            <h2> Nicolas Lamon
             </h2>
             <p>
 
@@ -162,7 +161,7 @@
             <div id="membres">
                 <img src="../images/membre 11.jpg" alt="image" width="100%" height="100%" />
             </div>
-            <h2> case 6
+            <h2> Olivier Genest
             </h2>
             <p>
 
@@ -179,7 +178,7 @@
                 en échange. Un merci tout special a la capitaine de m'avoir accueillit si chaleureusement.
             </p>
         </div>
-        <div id="case">
+        <!-- <div id="case">
             <div id="membres">
                 <img src="../images/image temporaire.png" alt="image" width="100%" height="100%" />
             </div>
@@ -188,15 +187,16 @@
             <p>
 
             </p>
-        </div>
+        </div>-->
         <div id="case">
             <div id="membres">
                 <img src="../images/image temporaire.png" alt="image" width="100%" height="100%" />
             </div>
-            <h2> case 15
+            <h2> Karine Huot, Personne-ressource du club de robotique
             </h2>
             <p>
-
+                Chaque année le club de robotique du Collège sait nous surprendre et être original avec leurs idées. Ce que je retiens de notre équipe c’est leur grand sens des responsabilité, leur fiabilité et dévouement à cette compétition. Donc mon rôle est de les
+                supporter et les aider à aller encore plus loin et se dépasser. Bravo la gang et on lâche pas!
             </p>
         </div>
 
