--- a/Site web/Francais/Les membres.html
+++ b/Site web/Francais/Les membres.html
@@ -164,7 +164,8 @@
             <h2> Olivier Genest
             </h2>
             <p>
-
+                Durant mon séjour dans le club de robotique à montmorency, j’ai pu appliquer mon savoir théorique en pratique. La programmation du kiosque était l’une des choses les plus intéressantes à faire, car cela m’a donné un niveau de difficulté des plus captivants.
+                J’ai eu l’un des meilleurs moments de ma vie avec cette équipe en réalisant ce projet.
             </p>
         </div>
         <div id="case">
@@ -174,8 +175,8 @@
             <h2> Elyanna
             </h2>
             <p>
-                Joindre le club de robotique a été une bouffée d'air frais dans mon année. Ces gens sont devenue ma famille et ont permis a ma personne de grandir. Faire partie de ce club m'a donné le courage d'exploiter mes talents et j'ai recu beaucoup de gratitude
-                en échange. Un merci tout special a la capitaine de m'avoir accueillit si chaleureusement.
+                Joindre le club de robotique a été une bouffée d'air frais dans mon année. Ces gens sont devenue ma famille et ont permis à ma personne de grandir. Faire partie de ce club m'a donné le courage d'exploiter mes talents et j'ai recu beaucoup de gratitude
+                en échange. Un merci tout special à la capitaine pour m'avoir accueillit si chaleureusement.
             </p>
         </div>
         <!-- <div id="case">
