--- a/Site web/Francais/Journal de bord.html
+++ b/Site web/Francais/Journal de bord.html
@@ -94,7 +94,7 @@
             sont notées, les nouveaux adversaires sont remarqués, rapidement la section Jeu arrive. Les carrés noirs cachant les parties importantes du texte sont plus que frustrants, malgré tout nous tentons de décortiquer le texte comme possible. Les
             carrés noirs ne nous empêchent pas de spéculer sur le jeu. Il est possible de comprendre que les robots devront interagir avec plusieurs types d’obstacles qui auront différents effets sur l’issu de la manche. Nous remarquons également que
             les copilotes auront une grande importance cette année, peut-être le pilote aura-t-il un handicap de quelconque nature? Tant bien que mal, l’équipe pense avoir tiré des règlements préliminaires tout ce qu’il était possible d’en tirer. Les
-            théories sur le jeu ne manquent pas, déjà deux personnes sont au tableau pour faire des croquis d’arène et de robot. Sur un papier a été noter les questions pertinentes ayant fait éruptions pendant la lecture. Celles-ci nous aiderons peut-être
+            théories sur le jeu ne manquent pas, déjà deux personnes sont au tableau pour faire des croquis d’arène et de robot. Sur un papier a été noter les questions pertinentes ayant fait éruptions pendant la lecture. Celles-ci nous aideront peut-être
             à mieux saisir les règlements une fois la version finale publiée.
         </p>
     </div>
