--- a/Site web/Francais/Les membres.html
+++ b/Site web/Francais/Les membres.html
@@ -154,7 +154,8 @@
             <h2> Chloé Legault
             </h2>
             <p>
-
+                J'en suis maintenant à ma deuxième et dernière année de robotique avec Montmorency. Cette année j'ai principalement aidé pour la vidéo, le kiosque, ainsi que le contenu du site web. Après uniquement deux ans, je peux anoncer que l'urgence est le seul
+                moyen de faire les choses que Montmorency connait. Le stress est pourtant un excellent moyen de tisser des liens.
             </p>
         </div>
         <div id="case">
