--- a/Site web/Francais/Journal de bord.html
+++ b/Site web/Francais/Journal de bord.html
@@ -88,7 +88,7 @@
         </p>
         <h2>Rencontre 5</h2>
         <p style="line-height: 25px;">
-            23 octobre 2020, deux jours après la remise électronique des règlements préliminaires. La compétition commence peu à peu à se concrétisée. Nous avons un thème, d’innombrables idées de kiosques, de nouvelles recrues… il ne reste plus qu’à connaitre le
+            23 octobre 2020, deux jours après la remise électronique des règlements préliminaires. La compétition commence peu à peu à se concrétiser. Nous avons un thème, d’innombrables idées de kiosques, de nouvelles recrues… il ne reste plus qu’à connaitre le
             jeu pour amorcer le robot. Alexandra commence par expliquer en quoi consiste le kick off et que les étudiants qui pourront y assister seront choisis sous peu. Puis, on décide de présenter les règlements reçus à l’aide du projecteur de la classe.
             Les étudiants semblent hypnotisés par le tableau. Après tout, pour certains c’est la première fois qu’ils voient un livret de règlements de la CRC. 60 pages, c’est long. Les avant-propos et l’introduction sont brièvement expliqués, les dates
             sont notées, les nouveaux adversaires sont remarqués, rapidement la section Jeu arrive. Les carrés noirs cachant les parties importantes du texte sont plus que frustrants, malgré tout nous tentons de décortiquer le texte comme possible. Les
