--- a/Site web/Francais/Les membres.html
+++ b/Site web/Francais/Les membres.html
@@ -104,7 +104,7 @@
                 Charles Bourque
             </h2>
             <p>
-
+                Dear diary. C’est ma deuxième année de robotique pour la CRC. J’ai encore la piqûre et pas sur le point d’arrêté. Un endroit pour avoir du plaisir et se faire des amis. C’est comme ma deuxième famille!
             </p>
         </div>
         <div id="case">
@@ -124,7 +124,8 @@
             <h2> Mikhael Bianki-Massé
             </h2>
             <p>
-
+                Première année en robotique et de façon plus générale dans un club, participer à ce grand projet m'a permis de me développer grandement sur le plan humain et du travail d'équipe. Je me suis grandement impliqué dans le kiosque notamment au niveau du tableau
+                de commande mais également dans le robot d'un point de vue mécanique et structurel et finalement au niveau du film.
             </p>
         </div>
         <!--<div id="case">
