--- a/Site web/index.html
+++ b/Site web/index.html
@@ -5,7 +5,8 @@
     <meta charset="utf-8" />
     <title> Montmorency Robotique </title>
     <link rel="icon" type="image/png" href="images/boule rose.png" />
-    <link rel="stylesheet" media="screen" type="text/css" href="../Site web/CSS/Style choix de langue.css" />
+    <link rel="stylesheet" media="screen" type="text/css" href="CSS/Style choix de langue.css" />
+
 </head>
 
 <body background="https://i.pinimg.com/originals/c3/f3/fa/c3f3fab4df6c49738448c718ae3df0cd.gif?fbclid=IwAR1uzQlFp_22m72K7f8aO7SXyat4jikuw00NKitCS0AgB3hf-I02QLprxaw">
